kubernetes/http_redirect/gateway_redirect.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-redirect
  labels:
    otherInfra: httpToHttps
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: redirect
  namespace: gateway-redirect
spec:
  parentRefs:
    - name: external-http
      namespace: gateway-infra
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
