kubernetes/http_redirect/http_route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: default-backend
  labels:
    gateway: external-http
spec:
  parentRefs:
    - kind: Gateway
      name: external-http
      namespace: gateway-infra
      sectionName: https
  rules:
    - backendRefs:
        - name: store-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: store-external
  labels:
    gateway: external-http
spec:
  parentRefs:
    - kind: Gateway
      name: external-http
      namespace: gateway-infra
      sectionName: https
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: store-v1
          port: 8080
    - matches:
        - path:
            value: /v2
      backendRefs:
        - name: store-v2
          port: 8080
    - matches:
        - path:
            value: /de
      backendRefs:
        - name: store-german
          port: 8080
